# chess-lab

./: .gitignore  BUG_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  DOCS_GUIDE.md  DOCUMENTATION_SUMMARY.md  FLOW.md  GET_STARTED.md  INSTRUCTOR_CHECKLIST.md  INSTRUCTOR_CHECKLIST.md.deprecated  INSTRUCTOR_GUIDE.md  LAB_GUIDE.md  LAB_IMPLEMENTATION.md  LAB_IMPLEMENTATION.md.deprecated  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART.md.deprecated  QUICKSTART_LAB.md  QUICKSTART_LAB.md.deprecated  README.md  REFERENCE.md  STRUCTURE_COMPARISON.txt  demo.sh  verify-lab.sh
.github/: README.md  chess-test.prompt.md  chessexpert.chatmode.md  codereview.chatmode.md  copilot-chat-modes.json  copilot-chat-participants.json  copilot-instructions.md  perfexpert.chatmode.md  testexpert.chatmode.md  uxexpert.chatmode.md
.github/chatmodes/: chess-expert.chatmode.md  code-review.chatmode.md  perf-expert.chatmode.md  test-expert.chatmode.md  ux-expert.chatmode.md
.github/prompts/: chess-test.prompt.md
_codeql_build_dir/: demo_board  test_chess
include/: Board.h  Display.h  Game.h  Piece.h
src/: Board.cpp  Display.cpp  Game.cpp  Piece.cpp  demo_board.cpp  main.cpp  test_chess.cpp
